WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187031
[LFC] Computed height for in-flow non-replaced should not include padding and border.
https://bugs.webkit.org/show_bug.cgi?id=187031
Summary
[LFC] Computed height for in-flow non-replaced should not include padding and...
alan
Reported
2018-06-25 21:12:11 PDT
ssia.
Attachments
Patch
(3.62 KB, patch)
2018-06-25 21:28 PDT
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-06-25 21:28:22 PDT
Created
attachment 343581
[details]
Patch
alan
Comment 2
2018-06-26 06:36:36 PDT
Committed
r233198
: <
https://trac.webkit.org/changeset/233198
>
Radar WebKit Bug Importer
Comment 3
2018-06-26 06:37:20 PDT
<
rdar://problem/41469062
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug